// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders add 1`] = `
<Component
  embeddable={
    Object {
      "vis": Object {
        "title": "",
      },
    }
  }
  index={
    Array [
      Object {
        "label": undefined,
      },
    ]
  }
  isAssociateAllowed={true}
  limitReachedCallout={
    <EuiCallOut
      color="warning"
      iconType="alert"
      title="Limit reached. No more than undefined objects can be associated with a visualizations."
    >
      Adding more objects may affect cluster performance and prevent dashboards from rendering properly. Remove associations before adding new ones.
    </EuiCallOut>
  }
  monitors={Array []}
  setAssociatedMonitors={[Function]}
  setFlyoutMode={[Function]}
  setSelectedMonitorId={[Function]}
  startingPanel="add"
/>
`;

exports[`Container renders associated 1`] = `
<Component
  embeddable={
    Object {
      "vis": Object {
        "title": "",
      },
    }
  }
  index={
    Array [
      Object {
        "label": undefined,
      },
    ]
  }
  isAssociateAllowed={true}
  limitReachedCallout={
    <EuiCallOut
      color="warning"
      iconType="alert"
      title="Limit reached. No more than undefined objects can be associated with a visualizations."
    >
      Adding more objects may affect cluster performance and prevent dashboards from rendering properly. Remove associations before adding new ones.
    </EuiCallOut>
  }
  monitors={Array []}
  setAssociatedMonitors={[Function]}
  setFlyoutMode={[Function]}
  setSelectedMonitorId={[Function]}
  startingPanel="associated"
/>
`;
